--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>ぼくの考えた最強の必殺技サイト</title>
+    <title>github pagesのテスト</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>ぼくの考えた最強の必殺技の紹介ページ</h1>
-    <p>最強の必殺技を教えます！！！</p>
-    <p>※github ioのテスト用です※</p>
+    <h1>github pagesのテストです</h1>
   </body>
 </html>
